--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
   <!-- max-width for ultra wide resolutions -->
   <div class="container-fluid" style="max-width: 1400px">
     <div class="row">
-      <aside class="col-lg-3 pb-3">
-        <h2 id="form-heading" class="mt-1 h3 form-label">
-          Search for a City:
+      <aside class="text-center col-lg-3 pb-3">
+        <h2 id="form-heading" class="mt-3 h3 form-label">
+          Search for a City
         </h2>
         <form id="search-form" class="form">
           <div class="form-inline form-group">
-            <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
+            <div class="input-group row mx-auto">
+              <input class="form-input weather-search col-12 pt-3 pb-3" type="text" id="search-input" placeholder="London"
                 aria-labelledby="form-heading" aria-controls="today forecast" />
               <div class="input-group-append">
-                <button type="submit" class="btn btn-primary" id="search-button" aria-label="submit search">
+                <button type="submit" class="btn btn-primary col-12 mt-4" id="search-button" aria-label="submit search">
                   Search
                 </button>
                 <hr class="hr weather-hr" />
